Minor improvements in tx pushing

--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
   ],
   "dependencies": {
     "async": "*",
-    "request": "*",
-    "js-yaml":"*"
+    "joola.sdk": "^0.7.24",
+    "js-yaml": "*",
+    "request": "*"
   },
   "license": "MIT"
 }
